[package]
name = "r_grid"
version = "0.1.0"
authors = ["Joel <joel.macaluso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
id-arena = "*"
